// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Alert should have a snapshot Alert component with props 1`] = `
<DocumentFragment>
  .c0 {
  padding: 8px 16px;
  color: #FAFAFD;
  border-radius: 8px;
  margin-bottom: 16px;
  background-color: #CB4335;
}

<div
    class="c0"
    color="red"
  >
    <span>
      Warning is a warning
    </span>
  </div>
</DocumentFragment>
`;

exports[`Components Alert should have a snapshot with a default Alert component 1`] = `
<DocumentFragment>
  .c0 {
  padding: 8px 16px;
  color: #FAFAFD;
  border-radius: 8px;
  margin-bottom: 16px;
  background-color: #73C6B6;
}

<div
    class="c0"
    color="green"
  >
    <span>
      Warning is a warning
    </span>
  </div>
</DocumentFragment>
`;

exports[`Components Alert should have a snapshot with a default Alert component styles 1`] = `
<DocumentFragment>
  .c0 {
  padding: 8px 16px;
  color: #FAFAFD;
  border-radius: 8px;
  margin-bottom: 16px;
  background-color: #73C6B6;
}

<div
    class="c0"
    color="green"
  >
    <span>
      Warning is a warning
    </span>
  </div>
</DocumentFragment>
`;
